--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">To Do List</string>
+    <string name="my_day">My day</string>
+    <string name="tasks">Tasks</string>
+    <string name="new_list">New list\n</string>
+    <string name="username">James Thompson</string>
+    <string name="email">useremail@gmail.com</string>
+    <string name="pick_background">Pick a background</string>
+    <string name="change_background">Change Background</string>
+    <string name="enter_your_text">Enter your text</string>
+    <string name="delete">Delete\n</string>
+    <string name="edit">Edit\n</string>
 </resources>
